manifests/applications/ingest/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-prod-media-svc
  namespace: ingest
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 8080
      targetPort: http
      name: http
      protocol: TCP
    - port: 6881
      targetPort: 6881
      name: p2p
    - port: 6881
      targetPort: 6881
      name: p2p-udp
      protocol: UDP
