manifests/applications/ingest/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-prod-media-ingress
  namespace: ingest
spec:
  ingressClassName: nginx
  rules:
  - host: "qbittorrent.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qbittorrent-prod-media-svc
            port:
              number: 8080
